--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,13 @@
     "project": ["tsconfig.json"]
   },
 
-  "ignorePatterns": ["webpack.config.js", "webpack.dev.js", "webpack.prod.js", "jest.config.ts"],
+  "ignorePatterns": [
+    "webpack.config.js",
+    "webpack.dev.js",
+    "webpack.prod.js",
+    "jest.config.ts",
+    "front/**/*"
+  ],
   "rules": {
     "@typescript-eslint/no-unused-vars": ["error"],
     "@typescript-eslint/indent": 0,
