--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/indent": 0,
     "@typescript-eslint/no-explicit-any": 2,
     "@typescript-eslint/comma-dangle": 0,
-    "@typescript-eslint/space-before-function-paren": 0
+    "@typescript-eslint/space-before-function-paren": 0,
+    "@typescript-eslint/member-delimiter-style": 0
   }
 }
